# TinyGarble2.0

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  config.sh  setup.sh
cmake/: tinygarble-config.cmake
exec/: LeNet.cpp  TinyGarble.cpp  TinyGarblePI.cpp  eval_TinyGarble.cpp  exec_common.h  formatInOut.cpp  millionaire.cpp  readCircuitFile.cpp  sequential_execution.h  sequential_execution_sh.h  unit_test.h
install_scripts/: install_dependencies.sh  install_emp-ot.sh  install_emp-tool.sh
test/: LenetSmall_mnist_img_A.inp  LenetSmall_mnist_img_B.inp  aes_ht_a.txt.in  aes_ht_b.txt.in  benchmarks.txt.in  benchmarks_aes_cbc.txt.in  consec_test_a.txt.in  consec_test_b.txt.in  mxm_relu_mp_a.txt.in  mxm_relu_mp_b.txt.in  ones.txt  rand.txt  test_TinyGarble.sh.in  testfiles.cmake  unpack.sh.in
tinygarble/: TinyGarble_config.h.in  c2pc_config.h  cnn_layers.h  emp-ag2pc.h  feq.h  fpre.h  helper.h  program_interface.h  program_interface_sh.h  sequential_2pc.h  sequential_2pc_exec.h  sequential_2pc_exec_sh.h  sequential_2pc_sh.h
